--- a/notebooks/experiment-transfer1-train.ipynb
+++ b/notebooks/experiment-transfer1-train.ipynb
@@ -192,7 +192,7 @@
    ],
    "source": [
     "# Change JAVA_HOME to fit your environment\n",
-    "JAVA_HOME = '/usr/lib/jvm/java-11-openjdk-amd64'\n",
+    "JAVA_HOME = 'FIT YOUR ENVIRONMENT'\n",
     "os.environ['JAVA_HOME'] = JAVA_HOME\n",
     "os.getenv('JAVA_HOME')"
    ]
