Fixed the bug in sparse indexing

--- a/notebooks/experiment2-transfer1-train.ipynb
+++ b/notebooks/experiment2-transfer1-train.ipynb
@@ -586,7 +586,7 @@
     "  --collection JsonCollection \\\n",
     "  --input $TC/mlir/pyserini  \\\n",
     "  --language ja \\\n",
-    "  --index $INDEX/pyserini \\\n",
+    "  --index $INDEX/sparse \\\n",
     "  --generator DefaultLuceneDocumentGenerator \\\n",
     "  --threads 2 \\\n",
     "  --storePositions --storeDocvectors --storeRaw"
